--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -11,9 +11,10 @@
 
     <!-- Insert Your Form Below -->
     <form>
-      <input type="text">
-    
-    </form>
+    <p>Your Name: <input type="text"></p>
+    <p>Your Favorite Food: <input type="text"></p>
+    <input type="submit">
+  </form>
 
   </body>
 </html>
